--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,10 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
 }
 
 dependencies {
@@ -106,6 +110,7 @@ dependencies {
 
     runtimeOnly fg.deobf("curse.maven:jei-238222:4030307")
     implementation fg.deobf("curse.maven:ic2-classic-242942:4746971")
+    implementation fg.deobf("maven.modrinth:carbon-config:l6LTuPIs")
     runtimeOnly fg.deobf("curse.maven:patchouli-306770:4031402")
     runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
     runtimeOnly fg.deobf("curse.maven:botania-225643:4371117")
